--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
+// - Font size (labels): 16px
+// - Weights: 400, 700
+
+$Mobile: 375px;
+$Desktop: 1440px;
+
+// ## Colors
+// ### Primary
+$Green200: hsl(148, 38%, 91%);
+$Green600: hsl(169, 82%, 27%);
+$Red: hsl(0, 66%, 54%);
+
+// ### Neutral
+$White: hsl(0, 0%, 100%);
+$Grey500: hsl(186, 15%, 59%);
+$Grey900: hsl(187, 24%, 22%);
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
