FEAT enhance contact form UI; add styling, validation messages, and mixins

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,65 +1,119 @@
-<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-  <label for="first-name">First Name <span>*</span></label>
-  <input type="text" id="first-name" formControlName="firstName" />
-  @if (formGroup.controls.firstName.errors !== null &&
+@let $Red = "hsl(0, 66%, 54%)"; @let $Grey500= "hsl(186, 15%, 59%)";
+
+<form class="container" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+  <h1 class="title">Contact Us</h1>
+
+  <label class="label" for="first-name">First Name <span>*</span></label>
+  <input
+    class="input"
+    type="text"
+    id="first-name"
+    formControlName="firstName"
+    [style.borderColor]="
+      formGroup.controls.firstName.invalid &&
+      formGroup.controls.firstName.touched
+        ? $Red
+        : $Grey500
+    "
+  />
+  @if (formGroup.controls.firstName.invalid &&
   formGroup.controls.firstName.touched) {
-  <p>This field is required</p>
+  <p class="error-message">This field is required</p>
   }
 
-  <label for="last-name">Last Name <span>*</span></label>
-  <input type="text" id="last-name" formControlName="lastName" />
-  @if (formGroup.controls.lastName.errors !== null &&
+  <label class="label" for="last-name">Last Name <span>*</span></label>
+  <input
+    class="input"
+    type="text"
+    id="last-name"
+    formControlName="lastName"
+    [style.borderColor]="
+      formGroup.controls.lastName.invalid && formGroup.controls.lastName.touched
+        ? $Red
+        : $Grey500
+    "
+  />
+  @if (formGroup.controls.lastName.invalid &&
   formGroup.controls.lastName.touched) {
-  <p>This field is required</p>
+  <p class="error-message">This field is required</p>
   }
 
-  <label for="email">Email Address <span>*</span></label>
-  <input type="email" id="email" formControlName="email" />
-  @if (formGroup.controls.email.errors !== null &&
-  formGroup.controls.email.touched) { @if
-  (formGroup.controls.email.errors["email"]) {
-  <p>Please enter a valid email address</p>
+  <label class="label" for="email">Email Address <span>*</span></label>
+  <input
+    class="input"
+    type="email"
+    id="email"
+    formControlName="email"
+    [style.borderColor]="
+      formGroup.controls.email.invalid && formGroup.controls.email.touched
+        ? $Red
+        : $Grey500
+    "
+  />
+  @if (formGroup.controls.email.invalid && formGroup.controls.email.touched) {
+  @if (formGroup.controls.email.errors?.["email"]) {
+  <p class="error-message">Please enter a valid email address</p>
   } @else {
-  <p>This field is required</p>
+  <p class="error-message">This field is required</p>
   } }
 
-  <label for="queryType">Query Type <span>*</span></label>
-  <input
-    type="radio"
-    name="queryType"
-    id="general-enquiry"
-    value="general-enquiry"
-    formControlName="queryType"
-  />
-  <label for="general-enquiry">General Enquiry</label>
-  <input
-    type="radio"
-    name="queryType"
-    id="support-request"
-    value="support-request"
-    formControlName="queryType"
-  />
-  <label for="support-request">Support Request</label>
-  @if (formGroup.controls.queryType.errors !== null &&
+  <label class="label" for="queryType">Query Type <span>*</span></label>
+  <div class="radio-input-container">
+    <div class="radio-input-label-container">
+      <input
+        type="radio"
+        name="queryType"
+        id="general-enquiry"
+        value="general-enquiry"
+        formControlName="queryType"
+      />
+      <label for="general-enquiry">General Enquiry</label>
+    </div>
+    <div class="radio-input-label-container">
+      <input
+        type="radio"
+        name="queryType"
+        id="support-request"
+        value="support-request"
+        formControlName="queryType"
+      />
+      <label for="support-request">Support Request</label>
+    </div>
+  </div>
+  @if (formGroup.controls.queryType.invalid &&
   formGroup.controls.queryType.touched) {
-  <p>Please select a query type</p>
+  <p class="error-message">Please select a query type</p>
   }
 
-  <label for="message">Message <span>*</span></label>
-  <input type="textArea" id="message" formControlName="message" />
-  @if (formGroup.controls.message.errors !== null &&
-  formGroup.controls.message.touched) {
-  <p>This field is required</p>
+  <label class="label" for="message">Message <span>*</span></label>
+  <textarea
+    class="text-area"
+    type="textArea"
+    id="message"
+    formControlName="message"
+    [style.borderColor]="
+      formGroup.controls.message.invalid && formGroup.controls.message.touched
+        ? $Red
+        : $Grey500
+    "
+  ></textarea>
+  @if (formGroup.controls.message.invalid && formGroup.controls.message.touched)
+  {
+  <p class="error-message">This field is required</p>
   }
 
-  <input type="checkbox" id="consent" formControlName="consent" />
-  <label for="consent">
-    I consent to being contacted by the team <span>*</span></label
-  >
-  @if (formGroup.controls.consent.errors !== null &&
-  formGroup.controls.consent.touched) {
-  <p>To submit this form, please consent to being contacted</p>
+  <div class="checkbox-input-container">
+    <input type="checkbox" id="consent" formControlName="consent" />
+    <label for="consent">
+      I consent to being contacted by the team <span>*</span></label
+    >
+  </div>
+  @if (formGroup.controls.consent.invalid && formGroup.controls.consent.touched)
+  {
+  <p class="error-message">
+    To submit this form, please consent to being contacted
+  </p>
   }
 
-  <button type="submit">Submit</button>
+  <button class="submit-btn" type="submit">Submit</button>
 </form>
