--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,4 +25,17 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-size: 16px;
+  color: $Grey900;
+}
+
+body {
+  background-color: $Green200;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
+
+app-root {
+  margin: 2rem 1rem;
 }
