--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,8 @@ $Red: hsl(0, 66%, 54%);
 
 // ### Neutral
 $White: hsl(0, 0%, 100%);
-$Grey500: hsl(186, 15%, 59%);
+// $Grey500: hsl(186, 15%, 59%);
+$Grey500: hsl(0, 0%, 46%);
 $Grey900: hsl(187, 24%, 22%);
 
 html,
