--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ $Desktop: 1440px;
 // ### Primary
 $Green200: hsl(148, 38%, 91%);
 $Green600: hsl(169, 82%, 27%);
+$Green900: hsl(169, 82%, 10%);
 $Red: hsl(0, 66%, 54%);
 
 // ### Neutral
