--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,6 +54,7 @@
   display: flex;
   flex-direction: column;
   grid-template-columns: 1fr;
+  margin: 1.5rem 0;
   padding: 1.5rem;
   background-color: s.$White;
   border-radius: 15px;
